--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,15 +33,21 @@ jobs:
       
       - name: Run Tests
         run: make test
-
-      - name: Install poetry
-        run: pipx install poetry
       
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
           cache: 'poetry'
+
+      - name: Install poetry
+        run: pipx install poetry
+
+      - name: Install dependencies
+        run: poetry install --no-root
+
+      - name: Create a virtual environment
+        run: poetry shell
 
       - name: Run Integration Tests
         run: make integration-test
